# tenso-rs

./: Cargo.toml  README.md
src/: lib.rs  prelude.rs
src/core/: mod.rs
src/core/tensor/: impl_create_from_ops.rs  impl_creation_ops.rs  impl_math_ops.rs  iterator.rs  mod.rs  storage.rs  tensor.rs
src/utils/: errors.rs  index.rs  math_old.rs  mod.rs  strides.rs
src/utils/math/: erf.rs  expit.rs  gamma.rs  log_gamma.rs  logit.rs  mod.rs  sinc.rs  xlogy.rs
